feat(core, jdbc): use virtual threads as "watcher" threads
This is safe as those threads are mainly sleeping.